--- a/index.html
+++ b/index.html
@@ -18,28 +18,35 @@
     <!--------------------->
     <!-- NAV-BAR SECTION -->
     <!--------------------->
-    <section class="home">
-      <nav class="nav">
+    <header class="header">
+      <nav class="navbar">
         <div class="container">
-          <div class="logo">
-            <a href="#">Aram Kalaiyagam</a>
+          <div class="brand">
+            <h1>ARAM KALAIYAGAM</h1>
           </div>
-          <div id="mainListDiv" class="main_list">
-            <ul class="navlinks">
-              <li><a href="#">About</a></li>
-              <li><a href="#gallery-part">Gallery</a></li>
-              <li><a href="#">Portfolio</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Contact</a></li>
+          <div class="toggle">
+            <span class="toggle-btn"></span>
+          </div>
+          <div class="menu">
+            <ul class="menu-list">
+              <li class="menu-item">
+                <a href="#" class="menu-link">About</a>
+              </li>
+              <li class="menu-item">
+                <a href="#" class="menu-link">Programs</a>
+              </li>
+              <li class="menu-item">
+                <a href="#" class="menu-link">Gallery</a>
+              </li>
+              <li class="menu-item">
+                <a href="#" class="menu-link">Contact</a>
+              </li>
             </ul>
           </div>
-          <span class="navTrigger">
-            <i></i>
-            <i></i>
-            <i></i>
-          </span>
         </div>
       </nav>
+    </header>
+    <section class="home">
       <div class="home-slider">
         <div class="slide1"></div>
         <div class="slide2"></div>
@@ -69,27 +76,6 @@
         </div>
       </article>
     </div>
-    <!-- <section id="about-part">
-      <div class="about-wrapper">
-        <div class="about-content">
-          <h1>About us</h1>
-          <p>
-            Established in the year 2019, Aram Kalaiyagam in Soolai, Erode is a
-            top player in the category Dance Classes in the Erode. This
-            well-known establishment acts as a one-stop destination servicing
-            customers both local and from other parts of Erode.
-          </p>
-        </div>
-        <div class="about-image">
-          <img
-            src="https://eoligive.sirv.com/Banner/aram%203-banner.jpg?w=1200"
-            width="1200"
-            height="856"
-            alt=""
-          />
-        </div>
-      </div>
-    </section> -->
     <!------------------>
     <!-- CARD SECTION -->
     <!------------------>
@@ -445,7 +431,7 @@
             <!-- GROUP SECTION end-->
             <!-- SILAMBAM SECTION start-->
             <div class="col-sm-4 all silambam">
-              <div class="grid-item">
+              <div class="grid-item" style="padding-left: 75px">
                 <img
                   src="https://eoligive.sirv.com/Silambam/stick1-re.jpg"
                   class="zoomD"
@@ -468,7 +454,7 @@
       </div>
     </section>
     <!-- GALLERY SECTION end -->
-    <div class="empty" style="height: 150px; background-color: aqua;"></div>
+    <div class="empty" style="height: 150px; background-color: aqua"></div>
     <!-- Jquery needed -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Isotope CDN link -->
