--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <!-- CSS links -->
     <link rel="stylesheet" href="style.css" />
     <!-- ANIMATE CDN -->
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
-    /> -->
     <!-- sirv CDN link -->
     <script src="https://scripts.sirv.com/sirv.js"></script>
+    <!-- FONT-AWESOME -->
+    <script
+      src="https://kit.fontawesome.com/57485fc5d2.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!--------------------->
@@ -41,6 +42,17 @@
               <li class="menu-item">
                 <a href="#" class="menu-link">Contact</a>
               </li>
+              <div class="buttons-container">
+                <div class="button facebook">
+                  <i class="fab fa-facebook-f fa-2x"></i>
+                </div>
+                <div class="button instagram">
+                  <i class="fab fa-instagram fa-2x"></i>
+                </div>
+                <div class="button twitter">
+                  <i class="fab fa-twitter fa-2x"></i>
+                </div>
+              </div>
             </ul>
           </div>
         </div>
@@ -55,25 +67,26 @@
     </section>
     <div id="about-box">
       <h1>About us</h1>
-      <article class="row-content" id="idea">
+      <article>
         <div>
-          <h3>Who we are</h3>
           <p>
-            Aram Kalaiyagam in Erode is one of a top player in the category
-            Dance Classes. This well-known establishment acts as a one-stop
-            destination servicing customers both local and from other parts of
-            Erode.
+            Aram Kalaiyagam was founded in the year 2019. It was founded with a
+            vision to create excellence in extracurricular activities. Today we
+            stand as a as a one-stop destination to conduct 5 courses under 1
+            roof. Our speciality of courses being Abacus, Keyboard, Guitar,
+            Western Dance, Classical Dance, Karate, Yoga, Archery, Silambam etc.
+            All our programs are conducted by leading experts & stalwarts.
           </p>
           <a href="#">Link to read more</a>
         </div>
-        <div>
+        <!-- <div>
           <img
             src="https://eoligive.sirv.com/Banner/aram%203-banner.jpg?w=1200"
             width="1200"
             height="856"
             alt=""
           />
-        </div>
+        </div> -->
       </article>
     </div>
     <!------------------>
