--- a/index.html
+++ b/index.html
@@ -467,7 +467,9 @@
       </div>
     </section>
     <!-- GALLERY SECTION end -->
-    <div class="empty" style="height: 150px; background-color: aqua"></div>
+    <div class="empty" style="height: 150px; background-color: aliceblue">
+      <div id="map"></div>
+    </div>
     <!-- Jquery needed -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Isotope CDN link -->
