--- a/index.html
+++ b/index.html
@@ -467,9 +467,89 @@
       </div>
     </section>
     <!-- GALLERY SECTION end -->
-    <div class="empty" style="height: 150px; background-color: aliceblue">
-      <div id="map"></div>
-    </div>
+    <section id="contact-section">
+      <div id="contact-box">
+        <h1>Contact Us</h1>
+        <!-- google-maps -->
+        <div class="map-responsive">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d977.9191303073443!2d77.70358786694625!3d11.35832125211156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba968d48d576df5%3A0xb003bdfe785e03e3!2sReliance%20Petrol%20Bunk!5e0!3m2!1sen!2sin!4v1598613416456!5m2!1sen!2sin"
+            width="600"
+            height="450"
+            frameborder="0"
+            style="border: 0"
+            allowfullscreen=""
+            aria-hidden="false"
+            tabindex="0"
+          ></iframe>
+        </div>
+        <div class="contacts-container">
+          <!-- mobile-details -->
+          <div class="mobile-details">
+            <h3>Contact</h3>
+            <i class="fas fa-phone-square-alt fa-10px"></i>
+            <p>+9791-292-331</p>
+            <a href="tel:+9791292331" class="contacts-btn">Call now</a>
+          </div>
+          <!-- address-details -->
+          <div class="address-details">
+            <h3>Address</h3>
+            <i class="fas fa-address-card"></i>
+            <p>
+              Kanagu Complex,<br />Soolai,<br />Erode - 638004,<br />(near
+              Reliance petrol bunk).,
+            </p>
+          </div>
+          <!-- working-hours -->
+          <div class="working-hours">
+            <h3>Business Hours</h3>
+            <i class="fas fa-clock"></i>
+            <div id="table">
+              <div class="tr">
+                <div class="td day">Mon:</div>
+                <div class="td">
+                  &nbsp 6:00 Am - 8:00 Am | 5:30 Pm - 9:00 Pm
+                </div>
+              </div>
+              <div class="tr">
+                <div class="td day">Tue:</div>
+                <div class="td">
+                  &nbsp 6:00 Am - 8:00 Am | 5:30 Pm - 9:00 Pm
+                </div>
+              </div>
+              <div class="tr">
+                <div class="td day">Wed:</div>
+                <div class="td">
+                  &nbsp 6:00 Am - 8:00 Am | 5:30 Pm - 9:00 Pm
+                </div>
+              </div>
+              <div class="tr">
+                <div class="td day">Thu:</div>
+                <div class="td">
+                  &nbsp 6:00 Am - 8:00 Am | 5:30 Pm - 9:00 Pm
+                </div>
+              </div>
+              <div class="tr">
+                <div class="td day">Fri:</div>
+                <div class="td">
+                  &nbsp 6:00 Am - 8:00 Am | 5:30 Pm - 9:00 Pm
+                </div>
+              </div>
+              <div class="tr">
+                <div class="td day">Sat:</div>
+                <div class="td">
+                  &nbsp 6:00 Am - 8:00 Am | 5:30 Pm - 9:00 Pm
+                </div>
+              </div>
+              <div class="tr">
+                <div class="td day">Sun:</div>
+                <div class="td">&nbsp 6:00 Am - 8:00 Pm</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Jquery needed -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Isotope CDN link -->
