--- a/index.html
+++ b/index.html
@@ -73,16 +73,20 @@
     <section id="about-container">
       <h2>About us</h2>
       <div class="contain">
-        <img src="https://eoligive.sirv.com/Banner/aram-1-scaled.png" alt="" />
-
+        <div class="container__image">
+          <img
+            src="https://eoligive.sirv.com/Banner/aram-1-scaled.png"
+            alt=""
+          />
+        </div>
         <div class="container__text">
           <p>
             Aram Kalaiyagam was founded in the year 2019. It was founded with a
             vision to create excellence in extracurricular activities. Today we
-            stand as a as a one-stop destination to conduct 5 courses under 1
-            roof. Our speciality of courses being Abacus, Keyboard, Guitar,
-            Western Dance, Classical Dance, Karate, Yoga, Archery, Silambam etc.
-            All our programs are conducted by leading experts & stalwarts.
+            stand as a one-stop destination to conduct 5 courses under 1 roof.
+            Our speciality of courses being Abacus, Keyboard, Guitar, Western
+            Dance, Classical Dance, Karate, Yoga, Archery, Silambam etc. All our
+            programs are conducted by leading experts & stalwarts.
           </p>
         </div>
       </div>
@@ -92,16 +96,18 @@
     <!-- CARD SECTION -->
     <!------------------>
     <!-- card section start -->
-    <div class="wrapper">
-      <h1>We Can Teach You</h1>
-      <p>Our programs</p>
+    <div class="wrapper background">
+      <div>
+        <h1>We Can Teach You</h1>
+        <p>Our programs</p>
+      </div>
       <div class="cards-grid">
         <div class="cards-grid-item">
           <figure>
             <img
-              src="https://eoligive.sirv.com/program%20images/bharatham.jpg?w=235&h=156&scale.option=ignore"
-              width="235"
-              height="156"
+              src="https://eoligive.sirv.com/program%20images/bharatham-final-bg.jpg"
+              width="450"
+              height="300"
               alt=""
             />
             <figcaption>bharatanatyam</figcaption>
@@ -110,9 +116,9 @@
         <div class="cards-grid-item">
           <figure>
             <img
-              src="https://eoligive.sirv.com/program%20images/karate-sidepose-re.jpg"
-              width="235"
-              height="156"
+              src="https://eoligive.sirv.com/program%20images/karate-final-bg.jpg"
+              width="640"
+              height="426"
               alt=""
             />
             <figcaption>karate</figcaption>
@@ -121,9 +127,9 @@
         <div class="cards-grid-item">
           <figure>
             <img
-              src="https://eoligive.sirv.com/program%20images/yoga-2-resized.jpg"
-              width="234"
-              height="156"
+              src="https://eoligive.sirv.com/program%20images/yoga-new.jpg"
+              width="450"
+              height="300"
               alt=""
             />
             <figcaption>Yoga</figcaption>
@@ -132,9 +138,9 @@
         <div class="cards-grid-item">
           <figure>
             <img
-              src="https://eoligive.sirv.com/program%20images/archery-re.jpg"
-              width="234"
-              height="156"
+              src="https://eoligive.sirv.com/program%20images/archery-new.jpg"
+              width="450"
+              height="300"
               alt=""
             />
             <figcaption>Archery</figcaption>
@@ -143,9 +149,9 @@
         <div class="cards-grid-item">
           <figure>
             <img
-              src="https://eoligive.sirv.com/program%20images/silambam-re.jpg"
-              width="234"
-              height="156"
+              src="https://eoligive.sirv.com/program%20images/silambam-nnew.jpg"
+              width="450"
+              height="300"
               alt=""
             />
             <figcaption>Silambattam</figcaption>
@@ -163,7 +169,7 @@
       <div id="lb-img"></div>
     </div>
     <section class="gallery section">
-      <div class="gallery-container">
+      <div class="gallery-container" style="background-color: ">
         <div class="top-side">
           <h2 class="title">GALLERY</h2>
         </div>
@@ -467,7 +473,7 @@
     </section>
     <!-- GALLERY SECTION end -->
     <section id="contact-section">
-      <div id="contact-box">
+      <div id="contact-box" style="background-color: springgreen">
         <h1>Contact Us</h1>
         <!-- google-maps -->
         <div class="contacts-container">
