--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
       <h2>About us</h2>
       <div class="contain">
         <div class="container__image">
-          <img
+          <!-- <img
             src="https://eoligive.sirv.com/Banner/aram-1-scaled.png"
             alt=""
-          />
+          /> -->
+          <img src="banner2-bg.jpg" alt="" />
         </div>
         <div class="container__text">
           <p>
@@ -96,66 +97,68 @@
     <!-- CARD SECTION -->
     <!------------------>
     <!-- card section start -->
-    <div class="wrapper background">
-      <div>
-        <h1>We Can Teach You</h1>
-        <p>Our programs</p>
-      </div>
-      <div class="cards-grid">
-        <div class="cards-grid-item">
-          <figure>
-            <img
-              src="https://eoligive.sirv.com/program%20images/bharatham-final-bg.jpg"
-              width="450"
-              height="300"
-              alt=""
-            />
-            <figcaption>bharatanatyam</figcaption>
-          </figure>
+    <div id="parallax" class="wrapper">
+      <div class="wrapper-content">
+        <div>
+          <h1>We Can Teach You</h1>
+          <p>Our programs</p>
         </div>
-        <div class="cards-grid-item">
-          <figure>
-            <img
-              src="https://eoligive.sirv.com/program%20images/karate-final-bg.jpg"
-              width="640"
-              height="426"
-              alt=""
-            />
-            <figcaption>karate</figcaption>
-          </figure>
-        </div>
-        <div class="cards-grid-item">
-          <figure>
-            <img
-              src="https://eoligive.sirv.com/program%20images/yoga-new.jpg"
-              width="450"
-              height="300"
-              alt=""
-            />
-            <figcaption>Yoga</figcaption>
-          </figure>
-        </div>
-        <div class="cards-grid-item">
-          <figure>
-            <img
-              src="https://eoligive.sirv.com/program%20images/archery-new.jpg"
-              width="450"
-              height="300"
-              alt=""
-            />
-            <figcaption>Archery</figcaption>
-          </figure>
-        </div>
-        <div class="cards-grid-item">
-          <figure>
-            <img
-              src="https://eoligive.sirv.com/program%20images/silambam-nnew.jpg"
-              width="450"
-              height="300"
-              alt=""
-            />
-            <figcaption>Silambattam</figcaption>
-          </figure>
+        <div class="cards-grid">
+          <div class="cards-grid-item">
+            <figure>
+              <img
+                src="https://eoligive.sirv.com/program%20images/bharatham-final-bg.jpg"
+                width="450"
+                height="300"
+                alt=""
+              />
+              <figcaption>bharatanatyam</figcaption>
+            </figure>
+          </div>
+          <div class="cards-grid-item">
+            <figure>
+              <img
+                src="https://eoligive.sirv.com/program%20images/karate-final-bg.jpg"
+                width="640"
+                height="426"
+                alt=""
+              />
+              <figcaption>karate</figcaption>
+            </figure>
+          </div>
+          <div class="cards-grid-item">
+            <figure>
+              <img
+                src="https://eoligive.sirv.com/program%20images/yoga-new.jpg"
+                width="450"
+                height="300"
+                alt=""
+              />
+              <figcaption>Yoga</figcaption>
+            </figure>
+          </div>
+          <div class="cards-grid-item">
+            <figure>
+              <img
+                src="https://eoligive.sirv.com/program%20images/archery-new.jpg"
+                width="450"
+                height="300"
+                alt=""
+              />
+              <figcaption>Archery</figcaption>
+            </figure>
+          </div>
+          <div class="cards-grid-item">
+            <figure>
+              <img
+                src="https://eoligive.sirv.com/program%20images/silambam-nnew.jpg"
+                width="450"
+                height="300"
+                alt=""
+              />
+              <figcaption>Silambattam</figcaption>
+            </figure>
+          </div>
         </div>
       </div>
     </div>
