--- a/index.html
+++ b/index.html
@@ -78,7 +78,12 @@
             src="https://eoligive.sirv.com/Banner/aram-1-scaled.png"
             alt=""
           /> -->
-          <img src="banner2-bg.jpg" alt="" />
+          <img
+            src="https://eoligive.sirv.com/Banner/banner2-bg.jpg"
+            width="400"
+            height="229"
+            alt=""
+          />
         </div>
         <div class="container__text">
           <p>
@@ -105,59 +110,86 @@
         </div>
         <div class="cards-grid">
           <div class="cards-grid-item">
-            <figure>
-              <img
-                src="https://eoligive.sirv.com/program%20images/bharatham-final-bg.jpg"
-                width="450"
-                height="300"
-                alt=""
-              />
-              <figcaption>bharatanatyam</figcaption>
-            </figure>
+            <div class="img__wrap">
+              <figure>
+                <img
+                  class="img__img"
+                  src="https://eoligive.sirv.com/program%20images/bharatham-final-bg.jpg"
+                  width="450"
+                  height="300"
+                  alt=""
+                />
+                <div class="img__description_layer">
+                  <figcaption class="img__description">
+                    bharatanatyam
+                  </figcaption>
+                </div>
+              </figure>
+            </div>
           </div>
           <div class="cards-grid-item">
-            <figure>
-              <img
-                src="https://eoligive.sirv.com/program%20images/karate-final-bg.jpg"
-                width="640"
-                height="426"
-                alt=""
-              />
-              <figcaption>karate</figcaption>
-            </figure>
+            <div class="img__wrap">
+              <figure>
+                <img
+                  class="img__img"
+                  src="https://eoligive.sirv.com/program%20images/karate-final-bg.jpg"
+                  width="640"
+                  height="426"
+                  alt=""
+                />
+                <div class="img__description_layer">
+                  <figcaption class="img__description">karate</figcaption>
+                </div>
+              </figure>
+            </div>
           </div>
           <div class="cards-grid-item">
-            <figure>
-              <img
-                src="https://eoligive.sirv.com/program%20images/yoga-new.jpg"
-                width="450"
-                height="300"
-                alt=""
-              />
-              <figcaption>Yoga</figcaption>
-            </figure>
+            <div class="img__wrap">
+              <figure>
+                <img
+                  class="img__img"
+                  src="https://eoligive.sirv.com/program%20images/yoga-new.jpg"
+                  width="450"
+                  height="300"
+                  alt=""
+                />
+                <div class="img__description_layer">
+                  <figcaption class="img__description">Yoga</figcaption>
+                </div>
+              </figure>
+            </div>
           </div>
           <div class="cards-grid-item">
-            <figure>
-              <img
-                src="https://eoligive.sirv.com/program%20images/archery-new.jpg"
-                width="450"
-                height="300"
-                alt=""
-              />
-              <figcaption>Archery</figcaption>
-            </figure>
+            <div class="img__wrap">
+              <figure>
+                <img
+                  class="img__img"
+                  src="https://eoligive.sirv.com/program%20images/archery-new.jpg"
+                  width="450"
+                  height="300"
+                  alt=""
+                />
+                <div class="img__description_layer">
+                  <figcaption class="img__description">Archery</figcaption>
+                </div>
+              </figure>
+            </div>
           </div>
           <div class="cards-grid-item">
-            <figure>
-              <img
-                src="https://eoligive.sirv.com/program%20images/silambam-nnew.jpg"
-                width="450"
-                height="300"
-                alt=""
-              />
-              <figcaption>Silambattam</figcaption>
-            </figure>
+            <div class="img__wrap">
+              <figure>
+                <img
+                  class="img__img"
+                  src="https://eoligive.sirv.com/program%20images/silambam-nnew.jpg"
+                  width="450"
+                  height="300"
+                  alt=""
+                />
+                <div class="img__description_layer">
+                  <figcaption class="img__description">Silambattam</figcaption>
+                </div>
+              </figure>
+            </div>
           </div>
         </div>
       </div>
@@ -581,11 +613,7 @@
                     </a>
                   </div>
                   <div class="footer-text">
-                    <p>
-                      Lorem ipsum dolor sit amet, consec tetur adipisicing elit,
-                      sed do eiusmod tempor incididuntut consec tetur
-                      adipisicing elit,Lorem ipsum dolor sit amet.
-                    </p>
+                    <p></p>
                   </div>
                   <div class="footer-social-icon">
                     <span>Follow us</span>
@@ -623,8 +651,8 @@
                   </div>
                   <div class="footer-text mb-25">
                     <p>
-                      Don’t miss to subscribe to our new feeds, kindly fill the
-                      form below.
+                      <!-- Don’t miss to subscribe to our new feeds, kindly fill the
+                      form below. -->
                     </p>
                   </div>
                   <div class="subscribe-form">
