updated footer section

--- a/index.html
+++ b/index.html
@@ -507,6 +507,7 @@
       </div>
     </section>
     <!-- GALLERY SECTION end -->
+    <!-- CONTACTS SECTION start -->
     <section id="contact-section">
       <div id="contact-box" style="background-color: springgreen">
         <h1>Contact Us</h1>
@@ -594,101 +595,44 @@
         </div>
       </div>
     </section>
+    <!-- CONTACTS SECTION end -->
     <!-- FOOTER-SECTION-START -->
     <section id="footer-section">
-      <footer class="footer-section">
-        <div class="container">
-          <div class="footer-content">
-            <div class="row">
-              <div class="col-xl-4 col-lg-4 mb-50">
-                <div class="footer-widget">
-                  <div class="footer-logo">
-                    <a href="index.html"
-                      ><img
-                        src="https://eoligive.sirv.com/Banner/aram-1-scaled.png?w=200"
-                        width="200"
-                        height="143"
-                        alt=""
-                      />
-                    </a>
-                  </div>
-                  <div class="footer-text">
-                    <p></p>
-                  </div>
-                  <div class="footer-social-icon">
-                    <span>Follow us</span>
-                    <a href="#"
-                      ><i class="fab fa-facebook-f facebook-bg"></i
-                    ></a>
-                    <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
-                    <a href="#"
-                      ><i class="fab fa-google-plus-g google-bg"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
-                <div class="footer-widget">
-                  <div class="footer-widget-heading">
-                    <h3>Useful Links</h3>
-                  </div>
-                  <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">services</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">Our Services</a></li>
-                    <li><a href="#">Expert Team</a></li>
-                    <li><a href="#">Contact us</a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
-                <div class="footer-widget">
-                  <div class="footer-widget-heading">
-                    <h3>Subscribe</h3>
-                  </div>
-                  <div class="footer-text mb-25">
-                    <p>
-                      <!-- Don’t miss to subscribe to our new feeds, kindly fill the
-                      form below. -->
-                    </p>
-                  </div>
-                  <div class="subscribe-form">
-                    <form action="#">
-                      <input type="text" placeholder="Email Address" />
-                      <button><i class="fab fa-telegram-plane"></i></button>
-                    </form>
-                  </div>
-                </div>
-              </div>
-            </div>
+      <footer class="footer-distributed">
+        <div class="footer-left">
+          <h3>Aram<span>Kalaiyagam</span></h3>
+          <p class="footer-links">
+            <a href="#" class="link-1">Home</a>
+            <a href="#">About us</a>
+            <a href="#">Our programmes</a>
+            <a href="#">Gallery</a>
+            <a href="#">Contact us</a>
+          </p>
+          <p class="footer-company-name">Aram-Kalaiyagam © 2020</p>
+        </div>
+        <div class="footer-center">
+          <div class="footer-logo">
+            <a href="index.html"
+              ><img
+                src="https://eoligive.sirv.com/Banner/aram-1-scaled.png?w=200"
+                width="200"
+                height="143"
+                alt=""
+              />
+            </a>
           </div>
         </div>
-        <div class="copyright-area">
-          <div class="container">
-            <div class="row">
-              <div class="col-xl-6 col-lg-6 text-center text-lg-left">
-                <div class="copyright-text">
-                  <p>
-                    Copyright &copy; 2018, All Right Reserved
-                    <a href="">Aram-Kalaiyagam</a>
-                  </p>
-                </div>
-              </div>
-              <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
-                <div class="footer-menu">
-                  <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Terms</a></li>
-                    <li><a href="#">Privacy</a></li>
-                    <li><a href="#">Policy</a></li>
-                    <li><a href="#">Contact</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
+        <div class="footer-right">
+          <p class="footer-company-about">
+            <span>About the company</span>
+            Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce
+            euismod convallis velit, eu auctor lacus vehicula sit amet.
+          </p>
+          <div class="footer-icons">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-github"></i></a>
           </div>
         </div>
       </footer>
