--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!------------------>
     <!-- about-section-start -->
     <section id="about-container">
-      <h2>About us</h2>
+      <h2>ABOUT US</h2>
       <div class="contain">
         <div class="container__image">
           <!-- <img
@@ -509,7 +509,7 @@
     <!-- GALLERY SECTION end -->
     <!-- CONTACTS SECTION start -->
     <section id="contact-section">
-      <div id="contact-box" style="background-color: springgreen">
+      <div id="contact-box" style="background-color: #fff5d7">
         <h1>Contact Us</h1>
         <!-- google-maps -->
         <div class="contacts-container">
