--- a/index.html
+++ b/index.html
@@ -614,9 +614,13 @@
           <div class="footer-logo">
             <a href="index.html"
               ><img
-                src="https://eoligive.sirv.com/Banner/aram-1-scaled.png?w=200"
-                width="200"
-                height="143"
+                src="https://eoligive.sirv.com/Banner/aram%203-banner.jpg?w=250"
+                width="250"
+                height="178"
+                srcset="
+                  https://eoligive.sirv.com/Banner/aram%203-banner.jpg?w=250 1x,
+                  https://eoligive.sirv.com/Banner/aram%203-banner.jpg?w=500 2x
+                "
                 alt=""
               />
             </a>
