new script updates

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="menu">
             <ul class="menu-list">
               <li class="menu-item">
-                <a href="#" class="menu-link">About</a>
+                <a href="#about-container" class="menu-link">About</a>
               </li>
               <li class="menu-item">
                 <a href="#" class="menu-link">Programs</a>
@@ -74,10 +74,6 @@
       <h2>ABOUT US</h2>
       <div class="contain">
         <div class="container__image">
-          <!-- <img
-            src="https://eoligive.sirv.com/Banner/aram-1-scaled.png"
-            alt=""
-          /> -->
           <img
             src="https://eoligive.sirv.com/Banner/banner2-bg.jpg"
             width="400"
