--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                 <a href="#about-container" class="menu-link">About</a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">Programs</a>
+                <a href="#parallax" class="menu-link">Programs</a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">Gallery</a>
+                <a href="#gallery-section" class="menu-link">Gallery</a>
               </li>
               <li class="menu-item">
-                <a href="#" class="menu-link">Contact</a>
+                <a href="#contact-section" class="menu-link">Contact</a>
               </li>
               <div class="buttons-container">
                 <div class="button facebook">
@@ -196,10 +196,11 @@
     <!--------------------->
     <!-- gallery section start -->
     <!-- [LIGHTBOX CONTAINER] -->
+
     <div id="lb-back">
       <div id="lb-img"></div>
     </div>
-    <section class="gallery section">
+    <section id="gallery-section" class="gallery section">
       <div class="gallery-container" style="background-color: ">
         <div class="top-side">
           <h2 class="title">GALLERY</h2>
@@ -632,7 +633,9 @@
             <a href="#"><i class="fa fa-facebook"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-github"></i></a>
+            <a href="https://github.com/mjofficials" target="_blank"
+              ><i class="fa fa-github"></i
+            ></a>
           </div>
         </div>
       </footer>
