--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <div id="lb-img"></div>
     </div>
     <section id="gallery-section" class="gallery section">
-      <div class="gallery-container" style="background-color: ">
+      <div class="gallery-container">
         <div class="top-side">
           <h2 class="title">GALLERY</h2>
         </div>
